--- a/Stable_Diffusion.ipynb
+++ b/Stable_Diffusion.ipynb
@@ -7239,6 +7239,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Hugging Face\n",
+        "\n",
+        "To be able to run this notebook, a \"HuggingFace🤗 Hub token\" is mandatory. This token is personal!\n",
+        "\n",
+        "In order to obtain such token, you need to accept a \"CreativeML OpenRAIL-M license\", which explicitly states that:\n",
+        "> `You cannot use the model to deliberately produce nor share illegal or harmful outputs or content.`\n",
+        "\n",
+        "Moreover, as for the DALL·E model, you are asked to abide to the following statement:\n",
+        "\n",
+        "\n",
+        "> `Do not create or disseminate images that create hostile or alienating environments for people. This includes images that people would find disturbing, distressing, or offensive; or content that propagates stereotypes.`"
+      ],
+      "metadata": {
+        "id": "Cis48GL4222i"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!huggingface-cli login"
@@ -7834,7 +7853,7 @@
       "cell_type": "code",
       "source": [
         "prompt = \"3d charizard in forest, realistic 4k, high resolution\" #@param {type:\"string\"}\n",
-        "num_images = 1\n",
+        "num_images = 1    # number of images to display\n",
         "\n",
         "prompts = [ prompt ] * num_images\n",
         "with autocast(\"cuda\"):\n",
