--- a/Stable_Diffusion_Animation.ipynb
+++ b/Stable_Diffusion_Animation.ipynb
@@ -926,8 +926,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "CIUJ7lWI4v53"
+        "id": "CIUJ7lWI4v53",
+        "cellView": "form"
       },
       "source": [
         "#@markdown **Select and Load Model**\n",
@@ -1122,13 +1122,13 @@
         "\n",
         "    #@markdown ####**Animation:**\n",
         "    animation_mode = '2D' #@param ['None', '2D', '3D', 'Video Input', 'Interpolation'] {type:'string'}\n",
-        "    max_frames = 1000 #@param {type:\"number\"}\n",
+        "    max_frames = 500 #@param {type:\"number\"}\n",
         "    border = 'wrap' #@param ['wrap', 'replicate'] {type:'string'}\n",
         "\n",
         "    #@markdown ####**Motion Parameters:**\n",
         "    angle = \"0:(1), 100:(-2), 200:(1), 300:(-1), 400:(1)\"#@param {type:\"string\"}\n",
         "    zoom = \"0:(1.1), 100:(0.95), 130:(1.01)\"#@param {type:\"string\"}\n",
-        "    translation_x = \"0:(10*sin(2*3.14*t/10))\"#@param {type:\"string\"}\n",
+        "    translation_x = \"0:(0)\"#@param {type:\"string\"}\n",
         "    translation_y = \"0:(0)\"#@param {type:\"string\"}\n",
         "    translation_z = \"0:(10)\"#@param {type:\"string\"}\n",
         "    rotation_3d_x = \"0:(0)\"#@param {type:\"string\"}\n",
@@ -1139,7 +1139,7 @@
         "    perspective_flip_phi = \"0:(t%15)\"#@param {type:\"string\"}\n",
         "    perspective_flip_gamma = \"0:(0)\"#@param {type:\"string\"}\n",
         "    perspective_flip_fv = \"0:(53)\"#@param {type:\"string\"}\n",
-        "    noise_schedule = \"0: (0.02)\"#@param {type:\"string\"}\n",
+        "    noise_schedule = \"0: (0.02), 100:(0.01)\"#@param {type:\"string\"}\n",
         "    strength_schedule = \"0: (0.65)\"#@param {type:\"string\"}\n",
         "    contrast_schedule = \"0: (1.0)\"#@param {type:\"string\"}\n",
         "\n",
@@ -1170,7 +1170,7 @@
         "    \n",
         "    #@markdown ####**Resume Animation:**\n",
         "    resume_from_timestring = True #@param {type:\"boolean\"}\n",
-        "    resume_timestring = \"20221017190224\" #@param {type:\"string\"}\n",
+        "    resume_timestring = \"20221018054210\" #@param {type:\"string\"}\n",
         "\n",
         "    return locals()\n",
         "\n",
@@ -1271,9 +1271,9 @@
         "\n",
         "animation_prompts = {\n",
         "    0: \"ship in the ocean, bright pastel colours, digital art, epic scene, kilian eng vibrant colours, winning award masterpiece, dynamic lighting, fantastically beautiful, illustration, aesthetically inspired, trending on Artstation, 8k\",\n",
-        "    100: \"delicious breakfast, bright pastel colours, digital art, epic scene, kilian eng vibrant colours, winning award masterpiece, dynamic lighting, fantastically beautiful, illustration, aesthetically inspired, trending on Artstation, 8k\",\n",
+        "    100: \"floating straw hat, bright pastel colours, digital art, epic scene, kilian eng vibrant colours, winning award masterpiece, dynamic lighting, fantastically beautiful, illustration, aesthetically inspired, trending on Artstation, 8k\",\n",
         "    200: \"a sportscar on the beach, bright pastel colours, digital art, epic scene, kilian eng vibrant colours, winning award masterpiece, dynamic lighting, fantastically beautiful, illustration, aesthetically inspired, trending on Artstation, 8k\",\n",
-        "    300: \"a beautiful mountain view, bright pastel colours, digital art, epic scene, kilian eng vibrant colours, winning award masterpiece, dynamic lighting, fantastically beautiful, illustration, aesthetically inspired, trending on Artstation, 8k\",\n",
+        "    300: \"beautiful mountain view, bright pastel colours, digital art, epic scene, kilian eng vibrant colours, winning award masterpiece, dynamic lighting, fantastically beautiful, illustration, aesthetically inspired, trending on Artstation, 8k\",\n",
         "}"
       ],
       "outputs": [],
@@ -1330,7 +1330,7 @@
         "\n",
         "    #@markdown **Batch Settings**\n",
         "    n_batch = 1 #@param\n",
-        "    batch_name = \"First_AI_Animation\" #@param {type:\"string\"}\n",
+        "    batch_name = \"Test\" #@param {type:\"string\"}\n",
         "    filename_format = \"{timestring}_{index}_{prompt}.png\" #@param [\"{timestring}_{index}_{seed}.png\",\"{timestring}_{index}_{prompt}.png\"]\n",
         "    seed_behavior = \"iter\" #@param [\"iter\",\"fixed\",\"random\"]\n",
         "    make_grid = False #@param {type:\"boolean\"}\n",
@@ -1876,9 +1876,9 @@
         "skip_video_for_run_all = False #@param {type: 'boolean'}\n",
         "fps = 30 #@param {type:\"number\"}\n",
         "#@markdown **Manual Settings**\n",
-        "use_manual_settings = False #@param {type:\"boolean\"}\n",
-        "image_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-10/First_AI_Animation/20221017190224_%05d.png\" #@param {type:\"string\"}\n",
-        "mp4_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-10/20221017190224.mp4\" #@param {type:\"string\"}\n",
+        "use_manual_settings = True #@param {type:\"boolean\"}\n",
+        "image_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-10/Test/20221018054210_%05d.png\" #@param {type:\"string\"}\n",
+        "mp4_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-10/20221018054210.mp4\" #@param {type:\"string\"}\n",
         "render_steps = False  #@param {type: 'boolean'}\n",
         "path_name_modifier = \"x0_pred\" #@param [\"x0_pred\",\"x\"]\n",
         "\n",
@@ -1893,7 +1893,7 @@
         "    print(f\"{image_path} -> {mp4_path}\")\n",
         "\n",
         "    if use_manual_settings:\n",
-        "        max_frames = \"1000\" #@param {type:\"string\"}\n",
+        "        max_frames = \"500\" #@param {type:\"string\"}\n",
         "    else:\n",
         "        if render_steps: # render steps from a single image\n",
         "            fname = f\"{path_name_modifier}_%05d.png\"\n",
